<resources>
    <string name="language_code">"en"</string>
    <string name="app_name">"NotifyMe"</string>
    <string name="checkin_title">"Check-in"</string>
    <string name="diary_title">"Diary"</string>
    <string name="checkin_button_title">"Check-in"</string>
    <string name="no_report_title">"No reports"</string>
    <string name="checkin_scan_code">"Scan QR code to check in"</string>
    <string name="NSCameraUsageDescription">"Your camera is used to scan the QR code."</string>
    <string name="NSFaceIDUsageDescription">"Enabling Face ID allows you to securely access your diary."</string>
    <string name="face_id_reason_text">"Authenticate yourself to access the diary"</string>
    <string name="no_report_hero_text">"Enjoy your day and stay healthy"</string>
    <string name="checkout_reminder_title">"Check-Out Reminder"</string>
    <string name="checkout_reminder_text">"Do you want to check out?"</string>
    <string name="check_in_now_button_title">"Check In Now"</string>
    <string name="checkout_button_title">"Check-Out"</string>
    <string name="report_title_singular">"1 report"</string>
    <string name="report_title_plural">"{NUMBER} reports"</string>
    <string name="report_message_text">"An infection could have occurred"</string>
    <string name="no_report_hero_text_highlight">"stay healthy"</string>
    <string name="report_message_text_highlight">"An infection"</string>
    <string name="qrscanner_scan_qr_text">"Scan QR code to check in"</string>
    <string name="qrscanner_error">"No valid code!"</string>
    <string name="no_report_information_title">"No potential infections have been reported within the last 14 days"</string>
    <string name="no_report_information_text">"Stay healthy"</string>
    <string name="report_information_title">"Potential infection within the last 14 days"</string>
    <string name="report_information_text">"You could be infectious without realising it."</string>
    <string name="report_information_button_title">"Advice"</string>
    <string name="report_message_days_ago">"{NUMBER} days ago"</string>
    <string name="homescreen_checkedin_label">"You are checked in"</string>
    <string name="edit_controller_your_checkin">"Your check-in at"</string>
    <string name="datepicker_from">"From"</string>
    <string name="datepicker_to">"To"</string>
    <string name="edit_mode_addcomment">"Add comment"</string>
    <string name="edit_mode_comment_placeholder">"eg. Who were you with?"</string>
    <string name="done_button">"Done"</string>
    <string name="diary_option_title">"Don't show in diary"</string>
    <string name="diary_option_subtext">"This check-in will not be shown in the diary.

Nevertheless the app stores this entry during 14 days to warn you in case of potential infection."</string>
    <string name="checkin_set_reminder">"Set reminder"</string>
    <string name="reminder_option_off">"off"</string>
    <string name="remove_from_diary_button">"Hide from diary"</string>
    <string name="remove_diary_warning_title">"Warning"</string>
    <string name="remove_diary_warning_text">"Are you sure you want to hide “{LOCATION_INFO}” from your diary? This action is irreversible. Please confirm you are sure about this."</string>
    <string name="remove_diary_remove_now_button">"Hide from diary"</string>
    <string name="remove_diary_warning_star_text">"The app stores this entry in an encrypted way during 14 days to warn you in case of a potential infection."</string>
    <string name="report_message_one_day_ago">"1 day ago"</string>
    <string name="android_notification_channel_name">"Reports"</string>
    <string name="report_message_today">"Today"</string>
    <string name="checkout_from_to_date">"{DATE1} to {DATE2}"</string>
    <string name="authenticate_for_diary">"Authenticate yourself to access the diary"</string>
    <string name="android_reminder_channel_name">"Check-Out Reminder"</string>
    <string name="reminder_option_hours">"{HOURS} h"</string>
    <string name="reminder_option_minutes">"{MINUTES}'"</string>
    <string name="non_productive_warning">"This app provides a preview of the NotifyMe app and is not meant for production."</string>
    <string name="checkin_reminder_settings_alert_title">"The reminder could not be set"</string>
    <string name="checkin_reminder_settings_alert_message">"In order to send you reminders the app needs the permission to send notifications. You can enable the permission for notifications in the app settings."</string>
    <string name="checkin_reminder_option_open_settings">"Open app settings"</string>
    <string name="cancel">"Cancel"</string>
    <string name="qr_scanner_no_camera_permission">"Access to your camera is needed to scan QR codes"</string>
    <string name="exposure_notification_title">"New message"</string>
    <string name="exposure_notification_body">"Open the app to read the message"</string>
    <string name="new_exposure_close_button">"Close"</string>
    <string name="new_exposure_notes_header">"Your Notes"</string>
    <string name="new_exposure_location_header">"Where"</string>
    <string name="imprint_webview_version_text">"Version"</string>
    <string name="imprint_webview_publisher_title">"Publisher"</string>
    <string name="imprint_webview_ubique_about_text">"Ubique is specialised in developing mobile applications for end users. As a leading company in creating products based on decentralised protocols, Ubique lays a strong focus on the connection between user experience and advanced technology."</string>
    <string name="imprint_webview_collaboration_title">"In collaboration with"</string>
    <string name="imprint_webview_paper_text">"This project implements the protocol CrowdNotifier by Wouter Lueks (EPFL) et al."</string>
    <string name="imprint_webview_paper_link">"github.com/CrowdNotifier/documents"</string>
    <string name="imprint_webview_more_info_title">"More information"</string>
    <string name="imprint_webview_more_info_link">"www.notify-me.ch"</string>
    <string name="imprint_webview_legal_title">"Legal"</string>
    <string name="imprint_webview_legal_link_text">"Terms of use and privacy policy"</string>
    <string name="imprint_webview_legal_link_url">"www.notify-me.ch/agb"</string>
    <string name="imprint_webview_sourcecode_title">"Source code"</string>
    <string name="imprint_webview_sourcecode_text">"The current source code is available under a Public License on GitHub:"</string>
    <string name="imprint_webview_sourcecode_link">"github.com/notifyme-app/readme"</string>
    <string name="web_generator_title">"Generate a QR code demo"</string>
    <string name="web_generator_category_label">"Category"</string>
    <string name="web_generator_category_other">"Other"</string>
    <string name="web_generator_category_meeting_room">"Meeting room"</string>
    <string name="web_generator_category_cafeteria">"Cafeteria"</string>
    <string name="web_generator_category_private_event">"Private party"</string>
    <string name="web_generator_title_label">"Title"</string>
    <string name="web_generator_title_placeholder">"e.g. Room or event name"</string>
    <string name="web_generator_subtitle_label">"Subtitle"</string>
    <string name="web_generator_subtitle_placeholder">"E.g. organization or organizer"</string>
    <string name="web_generator_addition_label">"Additional information"</string>
    <string name="web_generator_addition_placeholder">"E.g. building or place"</string>
    <string name="web_generator_generation_button_label">"Generate QR codes"</string>
    <string name="web_generator_back">"Back"</string>
    <string name="web_generator_public_bulletpoint_1">"This QR code enables visitors to check-in on site."</string>
    <string name="web_generator_public_bulletpoint_2">"NotifyMe can't scan the code."</string>
    <string name="web_generator_public_bulletpoint_3">"Check-ins are only saved on the users’ devices."</string>
    <string name="web_generator_private_bulletpoint_1">"This QR code informs visitors in case of an incident."</string>
    <string name="web_generator_private_bulletpoint_2">"The code can be scanned with any QR code reader."</string>
    <string name="web_generator_private_bulletpoint_3">"A decryption key is published. No data of the organizer is published."</string>
    <string name="web_generator_pdf_button">"Download PDF"</string>
    <string name="web_generator_public_qr_title">"&lt;span&gt;Public&lt;/span&gt;\
QR Code"</string>
    <string name="web_generator_private_qr_title">"&lt;span&gt;Private&lt;/span&gt;\
QR Code"</string>
    <string name="web_generator_missing_input">"Please fill in the mandatory field"</string>
    <string name="web_upload_title">"Report about a possible infection."</string>
    <string name="web_upload_period_label">"Concerned time period"</string>
    <string name="web_upload_period_from_label">"from"</string>
    <string name="web_upload_period_to_label">"to"</string>
    <string name="web_upload_note_label">"Advice to the visitor"</string>
    <string name="web_upload_note_placeholder">"What should the visitors do?"</string>
    <string name="web_upload_upload_button">"Inform visitors"</string>
    <string name="error_network_title">"Connection error"</string>
    <string name="error_network_text">"Check your internet connection"</string>
    <string name="error_notification_deactivated_title">"Deactivate notifications"</string>
    <string name="error_notification_deactivated_text">"Edit the app settings to receive report-notifications."</string>
    <string name="error_background_refresh_title">"Background updates are off"</string>
    <string name="error_background_refresh_text">"Edit the app settings to be informed at all times."</string>
    <string name="error_camera_permission_title">"No camera access"</string>
    <string name="error_camera_permission_text">"The app needs camera access to scan the QR code."</string>
    <string name="error_action_change_settings">"Edit settings"</string>
    <string name="error_action_retry">"Try again"</string>
    <string name="web_upload_success_message">"Information successful"</string>
    <string name="web_upload_error_message">"Information failed"</string>
    <string name="web_upload_missing_payload">"No private key found. Please scan a valid QR code."</string>
    <string name="error_title">"Error"</string>
    <string name="error_already_checked_in">"You are already checked in."</string>
    <string name="ok_button">"Ok"</string>
    <string name="web_landing_description">"Check-in for meetings and events."</string>
    <string name="web_landing_app_store_link">"https://apps.apple.com/app/id1537859001"</string>
    <string name="web_landing_play_store_link">"https://play.google.com/store/apps/details?id=ch.ubique.notifyme"</string>
    <string name="web_generator_pdf_created_on_format">"Created on %e %B %Y at %H:%M"</string>
    <string name="edit_controller_title">"Edit"</string>
    <string name="checkout_save_button_title">"Save"</string>
    <string name="app_name_highlight">"Me"</string>
    <string name="back_button">"Back"</string>
    <string name="web_generator_category_canteen">"Canteen"</string>
    <string name="web_generator_category_library">"Library"</string>
    <string name="delete_exposure_button_title">"Remove"</string>
    <string name="empty_diary_title">"No diary entries yet"</string>
    <string name="empty_diary_text">"The meetings &amp; events you attended to can be shown in your diary after checking out."</string>
    <string name="report_positive_share_diary_title">"Have you been tested positive?"</string>
    <string name="report_positive_share_diary_subtitle">"Share your diary to foster contact tracing."</string>
    <string name="report_positive_share_diary_button_title">"Share diary"</string>
    <string name="report_positive_success_title">"Thanks and get well soon"</string>
</resources>