<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/NotifyMe.Card"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/spacing_medium"
	android:clickable="false"
	android:focusable="false">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/remove_diary_entry_dialog_close_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:clickable="true"
			android:focusable="true"
			android:foreground="?android:selectableItemBackgroundBorderless"
			android:padding="@dimen/spacing_large"
			android:src="@drawable/ic_close" />

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingHorizontal="@dimen/spacing_very_large"
				android:paddingBottom="@dimen/spacing_huge">

				<TextView
					style="@style/NotifyMe.Text.Title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/remove_diary_warning_title" />

				<TextView
					android:id="@+id/hide_diary_entry_dialog_text"
					style="@style/NotifyMe.Text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_large"
					android:text="@string/remove_diary_warning_text" />

				<TextView
					style="@style/NotifyMe.Text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_large"
					android:text="@string/remove_diary_warning_star_text" />

				<Button
					android:id="@+id/hide_diary_entry_dialog_hide_button"
					style="@style/NotifyMe.Button.Small"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="@dimen/spacing_very_large"
					android:text="@string/remove_diary_remove_now_button" />

			</LinearLayout>

		</ScrollView>
	</LinearLayout>

</androidx.cardview.widget.CardView>