<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/fragment_share_diray_cancel_button"
			style="@style/NotifyMe.Text.Status.Primary.Small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:background="?selectableItemBackground"
			android:padding="@dimen/spacing_large"
			android:text="@string/cancel" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<TextView
			android:id="@+id/fragment_share_diray_title"
			style="@style/NotifyMe.Text.Title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="@dimen/spacing_large"
			android:layout_marginTop="@dimen/spacing_large"
			android:text="@string/report_positive_share_diary_title" />

		<TextView
			android:id="@+id/fragment_share_diray_info"
			style="@style/NotifyMe.Text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_large"
			android:text="@string/report_positive_share_diary_subtitle" />

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/fragment_share_diray_diary_list"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clipToPadding="false"
				android:paddingHorizontal="@dimen/spacing_large"
				android:paddingVertical="@dimen/spacing_small"
				android:scrollbars="vertical"
				app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
				tools:itemCount="4"
				tools:listitem="@layout/item_venue_visit" />

			<LinearLayout
				android:id="@+id/fragment_share_diray_empty_diary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginHorizontal="@dimen/spacing_very_large"
				android:orientation="vertical"
				android:visibility="gone"
				tools:visibility="gone">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:src="@drawable/ic_diary_empty" />

				<TextView
					style="@style/NotifyMe.Text.Subtitle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="@dimen/spacing_large"
					android:layout_marginTop="@dimen/spacing_larger"
					android:gravity="center"
					android:text="@string/empty_diary_title" />

				<TextView
					style="@style/NotifyMe.Text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="@dimen/spacing_large"
					android:layout_marginTop="@dimen/spacing_very_small"
					android:gravity="center"
					android:text="@string/empty_diary_text" />

			</LinearLayout>
		</FrameLayout>
	</LinearLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom">

		<Button
			android:id="@+id/fragment_share_diray_button"
			style="@style/NotifyMe.Button.Small"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="@dimen/spacing_large"
			android:text="@string/report_positive_share_diary_button_title" />

		<ProgressBar
			android:id="@+id/fragment_share_diray_loading_indicator"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:indeterminate="true"
			android:indeterminateTint="@color/primary"
			android:visibility="gone" />
	</FrameLayout>

</LinearLayout>