<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/NotifyMe.Card"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="@dimen/spacing_medium"
	android:clickable="false"
	android:focusable="false">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageButton
			android:id="@+id/warning_dialog_close_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="@dimen/spacing_small"
			android:layout_marginEnd="@dimen/spacing_small"
			android:background="@drawable/ripple_rounded"
			android:clickable="true"
			android:focusable="true"
			android:padding="@dimen/spacing_medium_large"
			android:src="@drawable/ic_close" />

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingHorizontal="@dimen/spacing_very_large"
				android:paddingBottom="@dimen/spacing_huge">

				<TextView
					style="@style/NotifyMe.Text.Title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/remove_diary_warning_title" />

				<TextView
					android:id="@+id/warning_dialog_text"
					style="@style/NotifyMe.Text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/spacing_large"
					tools:text="@string/remove_diary_warning_text" />

				<Button
					android:id="@+id/warning_dialog_action_button"
					style="@style/NotifyMe.Button.Small.Tertiary"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="@dimen/spacing_very_large"
					tools:text="@string/delete_exposure_button_title" />

			</LinearLayout>

		</ScrollView>
	</LinearLayout>

</androidx.cardview.widget.CardView>